--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -25,3 +25,14 @@
     line-height: 17px;
   }
 }
+
+.popup__button_disabled {
+  border: 1px solid rgba(196, 196, 196, 1);
+  color: rgba(196, 196, 196, 1);
+  background-color: transparent;
+}
+
+.popup__button_disabled:hover {
+  background: rgba(0, 0, 0, 0);
+  cursor: default;
+}
